--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -20,3 +20,11 @@ spring:
     config:
       failFast: true
       uri: http://st-config-server:8890
+      
+---
+spring:
+  profiles: aws
+  cloud:
+    config:
+      failFast: true
+      uri: http://st-config-server:8890
