chore: Set profile default

--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -2,8 +2,7 @@ spring:
   application:
     name: st-zuul-server
   profiles:
-    active: 
-      - "develop"
+    active: "develop"
       
 ---
 spring:
