--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 
 	<groupId>com.ai.st.zuul</groupId>
 	<artifactId>st-zuul-server</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.3.2</version>
 	<name>st-zuul-server</name>
 	<description>Sistema Transición - Servidor Perimetral</description>
 
