--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: st-zuul-server
   profiles:
-    active: "production"
+    active: "develop"
       
 ---
 spring:
