feat: Proxy reverse mapstore

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,11 @@ server:
 zuul:
   debug:
     request: true
+  routes:
+    mapstore:
+      path: /mapstore/**
+      url: http://192.168.98.200:8080
+      stripPrefix: false
   
 eureka:
   client:
