--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 
 	<groupId>com.ai.st.zuul</groupId>
 	<artifactId>st-zuul-server</artifactId>
-	<version>1.9.9</version>
+	<version>2.0.0-beta.1</version>
 	<name>st-zuul-server</name>
 	<description>Sistema Transición - Servidor Perimetral</description>
 
